[gd_scene load_steps=4 format=3 uid="uid://dx0tm71giiv3r"]

[ext_resource type="Script" path="res://scripts/interface/craft_item.gd" id="1_sp2vx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_476y2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_en5lm"]
bg_color = Color(0.247059, 0.247059, 0.247059, 0.843137)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="CraftItem" type="PanelContainer"]
custom_minimum_size = Vector2(300, 120)
offset_right = 300.0
offset_bottom = 119.0
size_flags_vertical = 0
script = ExtResource("1_sp2vx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 5.0

[node name="CraftItemName" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Item Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "Requires:"

[node name="CraftItemButton" type="Button" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_476y2")
theme_override_styles/normal = SubResource("StyleBoxFlat_en5lm")
button_mask = 3
text = "Craft"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Need:"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 6.7
columns = 4

[node name="ItemLocked" type="PanelContainer" parent="."]
visible = false
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/CraftItemButton" to="." method="_on_craft_item_button_pressed"]
